name:                schemey
version:             0.1.0.0
synopsis:            Scheme interpreter based on "Write Yourself a Scheme in 48 Hours"
description:         Please see README.org
homepage:            https://github.com/steshaw/schemey#readme
license:             BSD2
license-file:        LICENSE
author:              Steven Shaw
maintainer:          steven@steshaw.org
copyright:           (c) 2016, Steven Shaw
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable schemey
  main-is:             schemey.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7, either, parsec, mtl ==2.2.1
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall
